k8s-data-lakehouse/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-lakehouse
  labels:
    name: data-lakehouse
